@@ -78,7 +78,10 @@ def build_report(database,person):
             notfound.append(photo.get_path())
         
     for person_id in personList:
-        length = len(person.get_media_list())
+        person = database.try_to_find_person_from_id(person_id)
+	if not person:
+	    continue
+	length = len(person.get_media_list())
         if length > 0:
             with_photos = with_photos + 1
             total_photos = total_photos + length
